# Video-Feature-Extractor

./: README.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  video_feature_extraction_demo.ipynb
src/: __init__.py  video_feature_extractor.py
src/video_feature_extractor/: __init__.py  cli.py  config.py  core.py  exceptions.py  logging_config.py
src/video_feature_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/video_feature_extractor/extractors/: __init__.py  base.py  motion.py  object_detection.py  shot_cuts.py  text_ocr.py
src/video_feature_extractor/utils/: __init__.py  video.py
tests/: conftest.py  test_cli.py  test_core.py  test_extractors.py
